@@ -113,6 +113,7 @@ enum KeyboardShortcut
     SHORTCUT_INCREASE_ELEM_HEIGHT,
     SHORTCUT_DECREASE_ELEM_HEIGHT,
     SHORTCUT_TOGGLE_CLEARANCE_CHECKS,
+    SHORTCUT_CHANGE_WALL_SLOPE,
 
     SHORTCUT_COUNT,
 
