@@ -3905,8 +3905,8 @@ enum
 
     STR_RESEARCH_VEHICLE_LABEL = 6376,
     STR_RESEARCH_TYPE_LABEL_VEHICLE = 6377,
-
     STR_MULTIPLAYER_RECEIVING_OBJECTS_LIST = 6378,
+    STR_SHORTCUT_CHANGE_WALL_SLOPE = 6379,
 
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     /* MAX_STR_COUNT = 32768 */ // MAX_STR_COUNT - upper limit for number of strings, not the current count strings
